[package]
name = "puffin-imgui"
version = "0.13.4"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
natord = "1.0.9"
puffin = { version = "0.10.1", path = "../puffin" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
glium = { version = "0.30", default-features = true }
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", default-features = false, features = [
    "winit-25",
] }
