[package]
name = "puffin"
version = "0.10.1"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "Simple instrumentation profiler for games"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "../README.md"
categories = ["development-tools::profiling"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = [ "**/*.rs", "Cargo.toml"]

[dependencies]
byteorder = { version = "1" }
once_cell = "1"

# Optional:
anyhow = { version = "1", optional = true }
bincode = { version = "1.3", optional = true }
lz4_flex = { version = "0.9.0", optional = true } # for backwards compatability decoder
serde = { version = "1", features = ["derive", "rc"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { version = "0.9", optional = true }
[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = { version = "0.2.4", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = []
# Feature for enabling loading/saving data to a binary stream and/or file.
serialization = ["anyhow", "bincode", "lz4_flex", "serde", "zstd", "ruzstd"]

[[bench]]
name = "benchmark"
harness = false
